--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -17,3 +17,5 @@ bind-key l select-pane -R
 set -g display-panes-time 8000
 
 set -g default-terminal "screen-256color"
+
+set -g history-limit 5000
