--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -19,3 +19,6 @@ set -g display-panes-time 8000
 set -g default-terminal "screen-256color"
 
 set -g history-limit 8000
+
+bind -n WheelUpPane if-shell -F "#{mouse_any_flag}" "send-keys -M" "copy-mode -e"
+bind -n WheelDownPane select-pane -t= \; send-keys -M
