Enable terminal tab names in .tmux.conf
Enable terminal tab naming in tmux.

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -22,3 +22,7 @@ set -g history-limit 8000
 
 bind -n WheelUpPane if-shell -F "#{mouse_any_flag}" "send-keys -M" "copy-mode -e"
 bind -n WheelDownPane select-pane -t= \; send-keys -M
+
+# set terminal tab name, like iTerm2
+set-option -g set-titles on
+set-option -g set-titles-string "#{session_name}"
